Fixed width issue for menu items on tablet

--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -148,7 +148,6 @@ header {
   padding: 20px 0 20px 40px;
 }
 .primary-nav .primary-nav-item{
-  min-width:100%;
   margin: 0 0 5px;
 }
 
